Changes for 1.4.3:

 - [ZBX-152] fixed inefficient check of user permissions (Alexei)
 - [ZBX-189, CVE-2007-6210] fixed super-user permissions of user commands (Alexei)
 - [ZBX-183] fixed compilation problem with undefined res_query() (Alexei)
 - [ZBX-34] fixed transaction related conflict in DBget_maxid (Sasha)
 - [ZBX-181] fixed Activate/Disable items from applications (Artem)
 - [ZBX-176] fixed static compilation of Jabber support (Alexei)
 - [ZBX-100] fixed Oracle compilation errors (Alexei)
 - [ZBX-159] added support of vm.memory.size[available] under Linux (Alexei)
 - [ZBX-172] fixed incorrect SQL caused by character ' in item key (Alexei)
 - [ZBX-106] support of 16 processors for system.cpu.util[], other fixes (Alexei)
 - [ZBX-133] added more debug information on semaphore related errors (Alexei)
 - [ZBX-164] added support of units for values used in notifications (Alexei)
 - [ZBX-168] pass DNS or IP address instead of host name to external scripts (Alexei)
 - [ZBX-108] fixed change() and abschange() for negative integer values (Alexei)
 - [ZBX-114] fixed permissions for history of events (Alexei)
 - [ZBX-91] added Portuguese translation (Alexei)
 - [ZBX-166] accept SSL peer certificate even if domain name does not match CN (Alexei)
 - [ZBX-154] fixed processing of comma in zbx.fs.size[] (Alexei)
 - [ZBX-110] all phrases "slideshow" replaced by "slide show" (Alexei)
 - [ZBX-160] fixed web.page.get to send \r\n instead of \n (Alexei)
 - [ZBX-149] fixed incorrect processing of vm.memory.size key in FreeBSD (Sasha)
 - [ZBX-109] added support of vm.memory.size[pfree] Linux, FreeBSD & Win agents (Sasha)
 - [ZBX-122] Hungarian translate
 - [ZBX-118] fixed show_popup_menu display problem (Sasha)
 - [ZBX-116] fixed typo in data.sql, "interfice" (Alexei)
 - [ZBX-130] Refresh unsupported active checks (Sasha)
 - [ZBX-134] fixes for hostid/groupid validation on Node switch (Artem)
 - [ZBX-131] fixed viewing password on install in plain text (Artem)