@@ -1,5 +1,6 @@
 Changes for 1.4.3:
 
+ - [ZBX-192] fixed active checks stops after connection loss (Sasha)
  - [ZBX-152] fixed inefficient check of user permissions (Alexei)
  - [ZBX-189, CVE-2007-6210] fixed super-user permissions of user commands (Alexei)
  - [ZBX-183] fixed compilation problem with undefined res_query() (Alexei)
